--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.todo'
+    namespace 'com.example.dogagecalculator'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.todo"
+        applicationId 'com.example.dogagecalculator'
         minSdk 26
         targetSdk 32
         versionCode 1
@@ -57,6 +57,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation "io.coil-kt:coil-compose:2.1.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
